Fix font examples not showing

--- a/kana/kana.css
+++ b/kana/kana.css
@@ -21,6 +21,26 @@
 
     --speaker-button: url(play-dark.png);
     --shortcuts-image: url(shortcuts-dark.png);
+
+	--A-OTF-BokutohNStd-Regular-example: url("fonts_dark/A-OTF-BokutohNStd-Regular/ぎ.png");
+	--A-OTF-FolkPro-Regular-example: url("fonts_dark/A-OTF-FolkPro-Regular/ぎ.png");
+	--A-OTF-HappyNStd-Regular-example: url("fonts_dark/A-OTF-HappyNStd-Regular/ぎ.png");
+	--A-OTF-KumoyaStd-Regular-example: url("fonts_dark/A-OTF-KumoyaStd-Regular/ぎ.png");
+	--A-OTF-KyokaICAPro-Regular-example: url("fonts_dark/A-OTF-KyokaICAPro-Regular/ぎ.png");
+	--A-OTF-Shuuei3Std-Regular-example: url("fonts_dark/A-OTF-Shuuei3Std-Regular/ぎ.png");
+	--A-OTF-ZenGoNStd-Regular-example: url("fonts_dark/A-OTF-ZenGoNStd-Regular/ぎ.png");
+	--ArmedBanana-example: url("fonts_dark/ArmedBanana/ぎ.png");
+	--hiragino-kaku-example: url("fonts_dark/hiragino-kaku/ぎ.png");
+	--DFCry5_0-example: url("fonts_dark/DFCry5_0/ぎ.png");
+	--DFMrg3_0-example: url("fonts_dark/DFMrg3_0/ぎ.png");
+	--F5AJCCPE_0-example: url("fonts_dark/F5AJCCPE_0/ぎ.png");
+	--F5AJCMHG-example: url("fonts_dark/F5AJCMHG/ぎ.png");
+	--MT_TARE-example: url("fonts_dark/MT_TARE/ぎ.png");
+	--SM-WIN-example: url("fonts_dark/SM-WIN/ぎ.png");
+	--SNsanafon-example: url("fonts_dark/SNsanafon/ぎ.png");
+	--sea-example: url("fonts_dark/sea/ぎ.png");
+	--KOI-WIN-example: url("fonts_dark/KOI-WIN/ぎ.png");
+	--sakamata-font-500-nostrict-example: url("fonts_dark/sakamata-font-500-nostrict/ぎ.png");
 }
 
 @media (prefers-color-scheme: light) {
@@ -46,6 +66,26 @@
 
         --speaker-button: url(play-light.png);
         --shortcuts-image: url(shortcuts-light.png);
+
+		--A-OTF-BokutohNStd-Regular-example: url("fonts_light/A-OTF-BokutohNStd-Regular/ぎ.png");
+		--A-OTF-FolkPro-Regular-example: url("fonts_light/A-OTF-FolkPro-Regular/ぎ.png");
+		--A-OTF-HappyNStd-Regular-example: url("fonts_light/A-OTF-HappyNStd-Regular/ぎ.png");
+		--A-OTF-KumoyaStd-Regular-example: url("fonts_light/A-OTF-KumoyaStd-Regular/ぎ.png");
+		--A-OTF-KyokaICAPro-Regular-example: url("fonts_light/A-OTF-KyokaICAPro-Regular/ぎ.png");
+		--A-OTF-Shuuei3Std-Regular-example: url("fonts_light/A-OTF-Shuuei3Std-Regular/ぎ.png");
+		--A-OTF-ZenGoNStd-Regular-example: url("fonts_light/A-OTF-ZenGoNStd-Regular/ぎ.png");
+		--ArmedBanana-example: url("fonts_light/ArmedBanana/ぎ.png");
+		--hiragino-kaku-example: url("fonts_light/hiragino-kaku/ぎ.png");
+		--DFCry5_0-example: url("fonts_light/DFCry5_0/ぎ.png");
+		--DFMrg3_0-example: url("fonts_light/DFMrg3_0/ぎ.png");
+		--F5AJCCPE_0-example: url("fonts_light/F5AJCCPE_0/ぎ.png");
+		--F5AJCMHG-example: url("fonts_light/F5AJCMHG/ぎ.png");
+		--MT_TARE-example: url("fonts_light/MT_TARE/ぎ.png");
+		--SM-WIN-example: url("fonts_light/SM-WIN/ぎ.png");
+		--SNsanafon-example: url("fonts_light/SNsanafon/ぎ.png");
+		--sea-example: url("fonts_light/sea/ぎ.png");
+		--KOI-WIN-example: url("fonts_light/KOI-WIN/ぎ.png");
+		--sakamata-font-500-nostrict-example: url("fonts_light/sakamata-font-500-nostrict/ぎ.png");
     }
 }
 
@@ -259,12 +299,32 @@ ul#tools li a {
 }
 
 .font_example {
-	font-size:2.2em;
+	font-size: 2.2em;
 }
 
-.font_example img {
+.font_example_image {
 	width:47px;
 }
+
+.A-OTF-BokutohNStd-Regular-example { content: var(--A-OTF-BokutohNStd-Regular-example); }
+.A-OTF-FolkPro-Regular-example { content: var(--A-OTF-FolkPro-Regular-example); }
+.A-OTF-HappyNStd-Regular-example { content: var(--A-OTF-HappyNStd-Regular-example); }
+.A-OTF-KumoyaStd-Regular-example { content: var(--A-OTF-KumoyaStd-Regular-example); }
+.A-OTF-KyokaICAPro-Regular-example { content: var(--A-OTF-KyokaICAPro-Regular-example); }
+.A-OTF-Shuuei3Std-Regular-example { content: var(--A-OTF-Shuuei3Std-Regular-example); }
+.A-OTF-ZenGoNStd-Regular-example { content: var(--A-OTF-ZenGoNStd-Regular-example); }
+.ArmedBanana-example { content: var(--ArmedBanana-example); }
+.hiragino-kaku-example { content: var(--hiragino-kaku-example); }
+.DFCry5_0-example { content: var(--DFCry5_0-example); }
+.DFMrg3_0-example { content: var(--DFMrg3_0-example); }
+.F5AJCCPE_0-example { content: var(--F5AJCCPE_0-example); }
+.F5AJCMHG-example { content: var(--F5AJCMHG-example); }
+.MT_TARE-example { content: var(--MT_TARE-example); }
+.SM-WIN-example { content: var(--SM-WIN-example); }
+.SNsanafon-example { content: var(--SNsanafon-example); }
+.sea-example { content: var(--sea-example); }
+.KOI-WIN-example { content: var(--KOI-WIN-example); }
+.sakamata-font-500-nostrict-example { content: var(--sakamata-font-500-nostrict-example); }
 
 #explanation {
 	line-height:1.6em;
